# ci-tools

./: .gitignore  .mergify.yml  .travis.yml  README.rst  gnocchixyz-travis-ci-config  requirements.txt  setup.cfg  tox.ini
dockerhub/: travis-ci-image.dockerfile
gnocchixyz_branches_config/: __init__.py
gnocchixyz_irc_config/: __init__.py
gnocchixyz_pastamaker/: __init__.py
