[metadata]
name = gnocchixyz-ci-tools
home-page = https://github.com/gnocchixyz/gnocchi-ci-tools
summary = Set of Gnocchixyz CItools
description-file = README.rst
author = Mehdi Abaakou
author-email = sileht@sielht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    gnocchixyz-branches-config

[extras]
test =
    fixtures

[entry_points]
console_scripts =
    gnocchixyz-branches-config = gnocchixyz_branches_config:main

[wheel]
universal = 1
