[metadata]
name = gnocchixyz-ci-tools
home-page = https://github.com/gnocchixyz/gnocchi-ci-tools
summary = Set of Gnocchixyz CI tools
description-file = README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    gnocchixyz-branches-config
    gnocchixyz-irc-config

scripts =
    gnocchixyz-travis-ci-config

[extras]
test =
    fixtures

[entry_points]
console_scripts =
    gnocchixyz-branches-config = gnocchixyz_branches_config:main
    gnocchixyz-irc-config = gnocchixyz_irc_config:main

[wheel]
universal = 1
